# SoftRobots.Inverse

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.AGPLV3.txt  README.md  SoftRobots.Inverse.html  SoftRobots.Inverse.md  SoftRobots.Inverse.pyscn  SoftRobots.InverseConfig.cmake.in
.github/workflows/: ci-conda.yml  ci.yml
cmake/: environment.cmake  packaging.cmake
cmake/Modules/: FindROBOTINO.cmake  FindqpOASES.cmake
cmake/modules/: FindOASES.cmake
examples/: .scene-tests
examples/sofapython3/: plugintests.pyscn
examples/sofapython3/component/constraint/BarycentricCenterEffector/: BarycentricCenterEffector_Rigid.py
examples/sofapython3/component/constraint/CableActuator/: CableActuator.html  CableActuator.py  Finger.py
examples/sofapython3/component/constraint/CableEffector/: PneuNets.html  PneuNets.py
examples/sofapython3/component/constraint/CableEffector/mesh/: PneuNets.stl
examples/sofapython3/component/constraint/CableEquality/: CableEquality.py  ConstantsAccordeon.py
examples/sofapython3/component/constraint/CableEquality/GeneratedMeshes/: Accordeon_Cavity.stl  Accordeon_Surface.stl  Accordeon_Volumetric.vtk
examples/sofapython3/component/constraint/CableEquality/PythonScripts/: EqController.py
examples/sofapython3/component/constraint/ForcePointActuator/: Tissues.html  Tissues.py
examples/sofapython3/component/constraint/ForcePointActuator/mesh/: skin.stl  skin.vtk  skinVisu.stl  sphere.stl  sphere.vtk  sphereVisu.stl
examples/sofapython3/component/constraint/ForceSurfaceActuator/: ForceSurfaceActuator.py  trajectoryCylinder.tkt
examples/sofapython3/component/constraint/ForceSurfaceActuator/mesh/: cylinder.brep  cylinder.vtk  cylinder_forces.stl  cylinder_visu.stl
examples/sofapython3/component/constraint/JointActuator/: JointActuator.py
examples/sofapython3/component/constraint/SlidingActuator/: actuatedBeam.py  actuatedRigidCube.py
examples/sofapython3/component/constraint/SurfacePressureActuator/: PneuNets.py  SurfacePressureActuator.html  SurfacePressureActuator.py  SurfacePressureAndCableActuator.py
examples/sofapython3/component/constraint/SurfacePressureActuator/mesh/: PneuNets.vtk  PneuNets_Cavity.stl
examples/sofapython3/component/constraint/SurfacePressureEquality/: ConstantsAccordeon.py  SurfacePressureEquality.py
examples/sofapython3/component/constraint/SurfacePressureEquality/GeneratedMeshes/: Accordeon_Cavity.stl  Accordeon_Surface.stl  Accordeon_Volumetric.vtk
examples/sofapython3/component/constraint/SurfacePressureEquality/PythonScripts/: EqController.py
examples/sofapython3/component/constraint/VolumeEffector/: VolumeEffector.py
examples/sofapython3/component/constraint/YoungModulusActuator/: YoungModulusActuator.html  YoungModulusActuator.py
examples/sofapython3/component/solver/QPInverseProblemSolver/: README.txt
examples/sofapython3/robots/: Diamond.py
examples/xml/component/constraint/PositionEffector/: PositionEffector_Rigid.html  PositionEffector_Rigid.scn  README.txt
extlibs/qpOASES-3.2.0/: CMakeLists.txt  libqpOASESConfig.cmake.in  make_osx.mk
extlibs/qpOASES-3.2.0/include/qpOASES/: ConstraintProduct.hpp  Matrices.hpp  QProblemB.ipp  SQProblemSchur.hpp
extlibs/qpOASES-3.2.0/src/: BLASReplacement.cpp  LAPACKReplacement.cpp  QProblem.cpp
python/__softrobotsinverse__/: __init__.py
src/SoftRobots.Inverse/binding/: Binding_QPInverseProblemSolver.cpp  Binding_QPInverseProblemSolver.h  Binding_QPInverseProblemSolver_doc.h  CMakeLists.txt  Module_SoftRobotsInverse.cpp
src/SoftRobots.Inverse/component/: config.h.in  initSoftRobotsInverse.cpp  initSoftRobotsInverse.h
src/SoftRobots.Inverse/component/behavior/: Actuator.cpp  Actuator.h  Actuator.inl  Effector.cpp  Effector.h  Effector.inl  Equality.cpp  Equality.h  Equality.inl  Sensor.cpp  Sensor.h  Sensor.inl
src/SoftRobots.Inverse/component/constraint/: BarycentricCenterEffector.cpp  BarycentricCenterEffector.h  BarycentricCenterEffector.inl  BeamRestPositionActuator.cpp  BeamRestPositionActuator.h  BeamRestPositionActuator.inl  CableActuator.cpp  CableActuator.h  CableActuator.inl  CableEffector.cpp  CableEffector.h  CableEffector.inl  CableEquality.cpp  CableEquality.h  CableEquality.inl  CableSensor.cpp  CableSensor.h  CableSensor.inl  ForcePointActuator.cpp  ForcePointActuator.h  ForcePointActuator.inl  ForceSurfaceActuator.cpp  ForceSurfaceActuator.h  ForceSurfaceActuator.inl  JointActuator.cpp  JointActuator.h  JointActuator.inl  JointModelActuator.cpp  JointModelActuator.h  JointModelActuator.inl  JointModelEffector.cpp  JointModelEffector.h  JointModelEffector.inl  JointModelEquality.cpp  JointModelEquality.h  JointModelEquality.inl  PositionEffector.cpp  PositionEffector.h  PositionEffector.inl  PositionEquality.cpp  (+21 more)
src/SoftRobots.Inverse/component/solver/: QPInverseProblemSolver.cpp  QPInverseProblemSolver.h  README.txt
src/SoftRobots.Inverse/component/solver/modules/: ConstraintHandler.cpp  ConstraintHandler.h  ContactHandler.cpp  ContactHandler.h  LCPQPSolver.cpp  LCPQPSolver.h  LCPQPSolverProxQP.cpp  LCPQPSolverProxQP.h  LCPQPSolverQPOases.cpp  LCPQPSolverQPOases.h  NLCPSolver.cpp  NLCPSolver.h  QPInverseProblem.cpp  QPInverseProblem.h  QPInverseProblemImpl.cpp  QPInverseProblemImpl.h  QPInverseProblemProxQP.cpp  QPInverseProblemProxQP.h  QPInverseProblemQPOases.cpp  QPInverseProblemQPOases.h  QPMechanicalAccumulateConstraint.cpp  QPMechanicalAccumulateConstraint.h  QPMechanicalSetConstraint.cpp  QPMechanicalSetConstraint.h
tests/: CMakeLists.txt  TestExamplesScenes.py
tests/component/constraint/: BarycentricCenterEffectorTest.cpp  CableActuatorTest.cpp  ConstraintTest.cmake  ForcePointActuatorTest.cpp  PositionEffectorTest.cpp  SlidingActuatorTest.cpp  SurfacePressureActuatorTest.cpp  YoungModulusActuatorTest.cpp
tests/component/constraint/scenes/: SurfacePressureConstraint.scn
tests/component/solver/: QPInverseProblemImplTest.cpp  QPInverseProblemSolverTest.cpp  QPInverseProblemSolverWithContactTest.cpp  SolverTest.cmake
tests/component/solver/scenes/: CubeOnFloor.pyscn  Finger.scn
(+2 files in other folders)
